# cockroach

./: DEPS.bzl  go.mod  go.sum
pkg/: BUILD.bazel
pkg/backup/: backup_job.go  restore_data_processor.go  restore_job.go
pkg/backup/backupinfo/: BUILD.bazel
pkg/cmd/dev/: build.go
pkg/cmd/roachprod-centralized/: BUILD.bazel  README.md  config.yml  main.go
pkg/cmd/roachprod-centralized/app/: BUILD.bazel  api.go  app.go  factory.go  options.go
pkg/cmd/roachprod-centralized/client/: BUILD.bazel  client.go  client_test.go
pkg/cmd/roachprod-centralized/cmd/: BUILD.bazel  api.go  root.go
pkg/cmd/roachprod-centralized/config/: config.go  config_test.go
pkg/cmd/roachprod-centralized/config/flags/: flags.go
pkg/cmd/roachprod-centralized/config/processing/: processing.go
pkg/cmd/roachprod-centralized/config/recursive/: recursive.go
pkg/cmd/roachprod-centralized/config/types/: types.go
pkg/cmd/roachprod-centralized/controllers/: BUILD.bazel  controllers.go  interfaces.go  types.go
pkg/cmd/roachprod-centralized/controllers/clusters/: BUILD.bazel  clusters.go  clusters_test.go  types.go
pkg/cmd/roachprod-centralized/controllers/clusters/types/: BUILD.bazel  types.go
pkg/cmd/roachprod-centralized/controllers/health/: health.go  types.go
pkg/cmd/roachprod-centralized/controllers/public-dns/: BUILD.bazel  public_dns.go  public_dns_test.go
pkg/cmd/roachprod-centralized/controllers/tasks/: BUILD.bazel  tasks.go  tasks_test.go  types.go
pkg/cmd/roachprod-centralized/docker/: Dockerfile  README.md  build.sh  cloudbuild.yaml  push.sh
pkg/cmd/roachprod-centralized/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md
pkg/cmd/roachprod-centralized/examples/: README.md  development-config.yaml  docker-compose.yml  grafana-datasources.yml  init-db.sql  kubernetes-deployment.yaml  production-config.yaml  prometheus.yml
pkg/cmd/roachprod-centralized/models/tasks/: tasks.go
pkg/cmd/roachprod-centralized/repositories/clusters/: BUILD.bazel  clusters.go
pkg/cmd/roachprod-centralized/repositories/clusters/cockroachdb/: BUILD.bazel  cockroachdb.go  migrations_definition.go
pkg/cmd/roachprod-centralized/repositories/clusters/memory/: BUILD.bazel  memory.go
pkg/cmd/roachprod-centralized/repositories/clusters/mocks/: BUILD.bazel  clusters.go
pkg/cmd/roachprod-centralized/repositories/health/: BUILD.bazel  health.go
pkg/cmd/roachprod-centralized/repositories/health/cockroachdb/: BUILD.bazel  cockroachdb.go  migrations_definition.go
pkg/cmd/roachprod-centralized/repositories/health/memory/: BUILD.bazel  memory.go
pkg/cmd/roachprod-centralized/repositories/health/mocks/: BUILD.bazel  health.go
pkg/cmd/roachprod-centralized/repositories/tasks/: tasks.go
pkg/cmd/roachprod-centralized/repositories/tasks/cockroachdb/: BUILD.bazel  cockroachdb.go  cockroachdb_test.go  migrations_definition.go  migrations_test.go
pkg/cmd/roachprod-centralized/repositories/tasks/memory/: BUILD.bazel  memory.go  memory_test.go
pkg/cmd/roachprod-centralized/repositories/tasks/mock/: BUILD.bazel  tasks.go
pkg/cmd/roachprod-centralized/repositories/tasks/mocks/: tasks.go
pkg/cmd/roachprod-centralized/services/clusters/: BUILD.bazel  clusters.go  clusters_test.go  dto_types.go  operations.go  tasks.go
pkg/cmd/roachprod-centralized/services/clusters/mocks/: BUILD.bazel  clusters.go
pkg/cmd/roachprod-centralized/services/clusters/models/: BUILD.bazel  models.go
pkg/cmd/roachprod-centralized/services/clusters/tasks/: BUILD.bazel  tasks.go
pkg/cmd/roachprod-centralized/services/dns/registry/: registry.go
pkg/cmd/roachprod-centralized/services/health/: BUILD.bazel  health.go
pkg/cmd/roachprod-centralized/services/health/mocks/: BUILD.bazel  health.go
pkg/cmd/roachprod-centralized/services/health/tasks/: BUILD.bazel  tasks.go
pkg/cmd/roachprod-centralized/services/public-dns/: BUILD.bazel  public_dns.go
pkg/cmd/roachprod-centralized/services/public-dns/mocks/: BUILD.bazel  public_dns.go
pkg/cmd/roachprod-centralized/services/public-dns/models/: BUILD.bazel  models.go
pkg/cmd/roachprod-centralized/services/public-dns/tasks/: BUILD.bazel  tasks.go
pkg/cmd/roachprod-centralized/services/tasks/: BUILD.bazel  dto_types.go  tasks.go  tasks_processor.go  tasks_test.go
pkg/cmd/roachprod-centralized/services/tasks/mocks/: BUILD.bazel  tasks.go
pkg/cmd/roachprod-centralized/services/tasks/types/: types.go
pkg/cmd/roachprod-centralized/utils/: logger.go
pkg/cmd/roachprod-centralized/utils/api/bindings/: binding.go  converter.go  parser.go  types.go  validator.go
pkg/cmd/roachprod-centralized/utils/database/: BUILD.bazel  connection.go  migrations.go  migrations_test.go
pkg/cmd/roachprod-centralized/utils/filters/: BUILD.bazel  filters_test.go  validation.go
pkg/cmd/roachprod-centralized/utils/filters/memory/: evaluator.go
pkg/cmd/roachprod-centralized/utils/filters/sql/: builder.go
pkg/cmd/roachprod-centralized/utils/filters/types/: types.go
pkg/cmd/roachprod/cli/: commands.go
pkg/cmd/roachprod/grafana/: annotations.go
pkg/cmd/roachtest/: cluster.go  test_runner.go
pkg/cmd/roachtest/spec/: cluster_spec.go
pkg/roachprod/: roachprod.go
pkg/roachprod/centralizedapi/: centralizedapi.go
pkg/roachprod/cloud/: BUILD.bazel  cluster_cloud.go  gc.go
pkg/roachprod/cloud/types/: BUILD.bazel
pkg/roachprod/install/: BUILD.bazel  services_test.go
pkg/roachprod/prometheus/: prometheus.go
pkg/roachprod/promhelperclient/: client.go  client_test.go
pkg/roachprod/roachprodutil/: identity.go
pkg/roachprod/vm/: startup.go  vm.go
pkg/roachprod/vm/aws/: aws.go  provider_options.go  support.go
pkg/roachprod/vm/azure/: azure.go  provider_options.go  utils.go
pkg/roachprod/vm/gce/: dns.go  dns_sdk.go  gcloud.go  provider_options.go  utils.go
pkg/roachprod/vm/ibm/: BUILD.bazel  helpers.go  ibm_extended_types.go  provider.go  provider_flags.go
pkg/roachprod/vm/local/: BUILD.bazel  local.go
pkg/security/clientcert/: cert_expiry_cache.go  cert_expiry_cache_test.go
pkg/util/metric/: metric.go
