load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "controllers",
    srcs = [
        "controllers.go",
        "interfaces.go",
        "types.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachprod-centralized/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/roachprod-centralized/utils",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
