load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "clusters",
    srcs = [
        "clusters.go",
        "types.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachprod-centralized/controllers/clusters",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/roachprod-centralized/controllers",
        "//pkg/cmd/roachprod-centralized/models/tasks",
        "//pkg/cmd/roachprod-centralized/services/clusters",
        "//pkg/roachprod/cloud",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
