load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "clusters",
    srcs = [
        "clusters.go",
        "operations.go",
        "tasks.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachprod-centralized/services/clusters",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/roachprod-centralized/models/tasks",
        "//pkg/cmd/roachprod-centralized/repositories/clusters",
        "//pkg/cmd/roachprod-centralized/services/tasks",
        "//pkg/cmd/roachprod-centralized/utils",
        "//pkg/roachprod",
        "//pkg/roachprod/cloud",
        "//pkg/roachprod/logger",
        "//pkg/roachprod/vm",
        "//pkg/util/syncutil",
        "@com_github_cockroachdb_errors//:errors",
    ],
)
