load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clusters",
    srcs = [
        "clusters.go",
        "operations.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachprod-centralized/services/clusters",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/roachprod-centralized/config/types",
        "//pkg/cmd/roachprod-centralized/models/tasks",
        "//pkg/cmd/roachprod-centralized/repositories/clusters",
        "//pkg/cmd/roachprod-centralized/services/clusters/models",
        "//pkg/cmd/roachprod-centralized/services/clusters/tasks",
        "//pkg/cmd/roachprod-centralized/services/health",
        "//pkg/cmd/roachprod-centralized/services/public-dns/tasks",
        "//pkg/cmd/roachprod-centralized/services/tasks/types",
        "//pkg/cmd/roachprod-centralized/utils/filters",
        "//pkg/cmd/roachprod-centralized/utils/filters/types",
        "//pkg/cmd/roachprod-centralized/utils/logger",
        "//pkg/roachprod/cloud",
        "//pkg/roachprod/cloud/cluster",
        "//pkg/roachprod/logger",
        "//pkg/roachprod/vm",
        "//pkg/roachprod/vm/aws",
        "//pkg/roachprod/vm/azure",
        "//pkg/roachprod/vm/gce",
        "//pkg/roachprod/vm/ibm",
        "//pkg/util/timeutil",
        "@com_github_cockroachdb_errors//:errors",
    ],
)

go_test(
    name = "clusters_test",
    srcs = ["clusters_test.go"],
    embed = [":clusters"],
    deps = [
        "//pkg/cmd/roachprod-centralized/repositories/clusters",
        "//pkg/cmd/roachprod-centralized/repositories/clusters/mocks",
        "//pkg/cmd/roachprod-centralized/services/clusters/models",
        "//pkg/cmd/roachprod-centralized/services/clusters/tasks",
        "//pkg/cmd/roachprod-centralized/services/health/mocks",
        "//pkg/cmd/roachprod-centralized/services/tasks/mocks",
        "//pkg/cmd/roachprod-centralized/services/tasks/types",
        "//pkg/cmd/roachprod-centralized/utils/filters",
        "//pkg/cmd/roachprod-centralized/utils/filters/types",
        "//pkg/cmd/roachprod-centralized/utils/logger",
        "//pkg/roachprod/cloud/cluster",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
