load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["tasks.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachprod-centralized/repositories/tasks/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/roachprod-centralized/models/tasks",
        "//pkg/cmd/roachprod-centralized/repositories/tasks",
        "//pkg/util/uuid",
        "@com_github_stretchr_testify//mock",
    ],
)
