load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = ["models.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachprod-centralized/services/clusters/models",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/roachprod-centralized/models/tasks",
        "//pkg/cmd/roachprod-centralized/utils",
        "//pkg/cmd/roachprod-centralized/utils/filters/types",
        "//pkg/cmd/roachprod-centralized/utils/logger",
        "//pkg/roachprod/cloud/cluster",
        "//pkg/roachprod/vm",
    ],
)
